# openAI_Assistant

./: .env  .env.example  .pre-commit-config.yaml  API_REFERENCE.md  COMPLETE_IMPLEMENTATION.md  DEPLOYMENT.md  INTEGRATION_GUIDE.md  Makefile  ORCHESTRATOR_SUMMARY.md  PRODUCTION_FIXES.md  QUICK_REFERENCE.md  ReadMe.md  SHIP_IT_COMPLETE.md  TUTORIAL.md  chatgpt_actions.json  compose.dev.yml  compose.prod.yml  copilot_fastapi_scaffold_instructions  copilot_instructions  requirements.txt
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile.dev  ORCHESTRATOR.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_orchestrator.py
backend/app/: __init__.py  main.py  models.py
backend/app/core/: __init__.py  allowlists.py  db.py  hmac.py  logging_config.py  n8n_client.py  orchestrator.py  rate_limit.py  scheduler.py  tracing.py  vaultwarden_client.py
backend/app/routers/: __init__.py  agents.py  feedback.py  fetch.py  fs.py  health.py  memory.py  orchestrate.py  prompts.py  ssh.py
backend/app/schemas/: agents.py  common.py  feedback.py  memory.py  prompts.py
backend/app/tools/: __init__.py  embedding.py  fs.py  gmail.py  memory.py  search.py  ssh.py
backend/docker/: Dockerfile  compose.core1.yml  compose.core3.yml  compose.dev.yml  deploy.ps1  deploy.sh
backend/docker/nginx/conf.d/: fastapi.conf
backend/docker/scripts/: backup-postgres.sh
backend/migrations/: 001_initial_schema.sql  002_hybrid_search_functions.sql  README.md
backend/test_payloads/: gmail_triage.json  memory_search.json  memory_write.json  ssh_dangerous.json  ssh_peek.json
backend/tests/: conftest.py  test_embedding.py  test_hmac.py  test_memory.py  test_rate_limit.py
frontend/: admin-settings.html  index.html  package.json  vite.config.js
frontend/assets/: app.js  styles.css
frontend/src/: App.jsx  styles.css
n8n_workflows/: README.md  digest-daily.json  gmail-triage.json
scripts/: dev_seed_memory.py  export_openapi.sh  serve_frontend.sh  smoke_orchestrate.ps1  smoke_orchestrate.sh  wait-for-it.sh
